Add server-side filtering for provenance records